--- a/approvalTaker.html
+++ b/approvalTaker.html
@@ -1,3 +1,9 @@
+
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="ISO-8859-1">
+<title>Approval taker</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <form id="form1" method="post">
  <div class="library">
@@ -36,3 +42,6 @@ $(document).on("click", ".remove-address",function(e){
     });
 });
 </script>
+</body>
+</head>
+</html>
