--- a/approvalTaker.html
+++ b/approvalTaker.html
@@ -5,6 +5,7 @@
 <meta charset="ISO-8859-1">
 <title>Approval taker</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<body>
 <form id="form1" method="post">
  <div class="library">
         <label >OS library link</label>
