correcting the approvalTaker.html file name

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<div class="dropdown">
 					<button class="dropbtn">Select User type</button>
 					<div class="dropdown-content">
-						<a href="approvaltaker.html">Aproval taker</a> <a href="approver.html">Approver</a> 
+						<a href="approvalTaker.html">Aproval taker</a> <a href="approver.html">Approver</a> 
 					</div>
 				</div>
 				</div>
